fix(styles): remove display property from msg__Box for improved visibility

--- a/css/login_msg.css
+++ b/css/login_msg.css
@@ -3,7 +3,6 @@
   border-radius: 16px;
   width: 90%;
   height: 74px;
-  display: none;
   align-items: center;
   justify-content: center;
   opacity: 0;
